@@ -535,6 +535,11 @@ public interface IJAMConst {
 	 */
 	public final static String ATTRIBUTE_NAME_SPAM_COLOR = "spamcolor";	
 	
+	/**
+	 * Attribute name for GRAVATAR photo.
+	 */
+	public final static String ATTRIBUTE_NAME_GRAVATAR = "gravatar";	
+	
 	
 	
 	// ATTRIBUTES VALUES
